--- a/Medical_charges_REG.ipynb
+++ b/Medical_charges_REG.ipynb
@@ -17,7 +17,7 @@
     "import seaborn as sns\n",
     "\n",
     "\n",
-    "df = pd.read_csv(\"/Users/vlad/Desktop/archive/Medical_charges.csv\")\n",
+    "df = pd.read_csv(\"Medical_charges.csv\")\n",
     "print(df)\n",
     "df.info()"
    ],
